<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/doctorDataToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <!--<LinearLayout
                android:id="@+id/doctorDataBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:tint="@color/positiveBtn"
                    android:background="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_back_btn"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/positiveBtn" />
            </LinearLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_activity_doctor_data"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/doctorDataSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:text="@string/doctor_save_btn"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:textColor="@color/positiveBtn" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/doctorDataNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctorDataToolbar" />

    <EditText
        android:id="@+id/doctorDataNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:background="@drawable/shape_rounded_square_border_gray"
        android:hint="@string/doctor_name_field"
        android:inputType="textCapWords|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDataNameLabel" />

    <Button
        android:id="@+id/doctorDataPickLogoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/shape_rounded_square_positive"
        android:padding="8dp"
        android:text="@string/doctor_pick_logo"
        android:textAllCaps="false"
        android:textColor="@color/lightBtnTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDataNameEdit" />

    <ImageView
        android:id="@+id/doctorDataImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDataNameEdit" />

    <Button
        android:id="@+id/doctorDataDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:text="@string/doctor_delete_data"
        android:textAllCaps="false"
        android:textColor="@color/negativeBtn"
        app:layout_constraintEnd_toStartOf="@+id/doctorDataEditBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorDataImg" />

    <Button
        android:id="@+id/doctorDataEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:text="@string/doctor_edit_values"
        android:textAllCaps="false"
        android:textColor="@color/positiveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/doctorDataDeleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/doctorDataImg" />

</android.support.constraint.ConstraintLayout>