<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/aditionalInstrToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <!--<LinearLayout
                android:id="@+id/doctorDataBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:tint="@color/positiveBtn"
                    android:background="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_back_btn"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/positiveBtn" />
            </LinearLayout>-->

            <Button
                android:id="@+id/aditionalInstrNextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:text="@string/aditional_instr_next_btn"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/positiveBtn" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/aditionalInstrAddInstrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/aditional_instr_add_extra_instr"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aditionalInstrToolbar" />

    <EditText
        android:id="@+id/aditionalInstrAddInstrEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:background="@drawable/shape_rounded_square_border_gray"
        android:hint="@string/aditional_instr_some_comments"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:lines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aditionalInstrAddInstrLabel" />
</android.support.constraint.ConstraintLayout>